# pgr-semestral-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  baseline.cpp  baseline.h  buffer.cpp  buffer.h  camera.cpp  camera.h  cheader.py  cmake_install.cmake  cursor.vert  expl.vert  fragment.frag  generalObject.cpp  generalObject.h  hustleVertex.vert  light.cpp  light.h  lobber  main.cpp  object.cpp  object.h  oscilating2.frag  pgr-sem  phong.frag  phong.vert  red.frag  run  shader.cpp  shader.h  slide.vert  terrain.cpp  terrain.h  vertex.vert
assets/: 4tiles.tga  shroom_cluster2.mtl  v1-main--m.mtl  valec.mtl
